client/main.css
/* ... */
.dropzone {
  margin: 10px;
  border-radius:10px;  
  width : 120px;
  height : 100px;
  /* border : 1px solid black; */
  background-color:#86aeef;
  background-image:url(../icons/button-icons/upload.png);
  background-size:50% 50%;
  background-repeat:no-repeat;
  background-position:center;
  z-index:900;

  }

.uploaded-photo {
  text-align: center;
  font-style: bold;
  max-width: 200px;
  max-height: 200px;
  border-radius: 10px;
}

.empty {
  padding:10px;
  text-align: center;
  vertical-align:text-center;
  font-style: bold;
  font-size:10px;
  max-width: 100px;
  max-height: 100px;
  border-radius: 10px;
  border:dotted;
  border-width: .5px;
}

textarea {
  text-align:left;
  height:50px;
  width:170px;
  border-radius: 5px;
}

#submit-alert-button {
  border-radius:10px;
  background-color:#b75d5d;
  height: 65px; 
  width: 150px;
  margin: 10px;
  font-size:20px;
}




/*
====================
Loading Page
==================== 
*/

.loading-container {
  grid-template-rows: 30% 70%;
  grid-template-areas: 'logo'
                       'loading';
  text-align: center;
}

.logo {
  grid-area: logo;
}

.loading-page-name {
  grid-area: logo;
}

.loading-page-loading {
  grid-area: loading;
}

.loading-dot {
  font-size: 48px;
  color: red;
  animation-name: blink;
  animation-duration: 1.4s;
  animation-iteration-count: infinite;
  animation-fill-mode: both;
}

.loading-dot:nth-child(2) {
  animation-delay: .2s;
}

.loading-dot:nth-child(3) {
  animation-delay: .4s;
}

.loading-dot:nth-child(4) {
  animation-delay: .6s;
}

.loading-dot:nth-child(5) {
  animation-delay: .8s;
}

/* .loading-page-loading div {
  display: flex;
  align-items: center;
  justify-content: center;
} */

/*
====================
Profile Page
==================== 
*/
.profile-layout {
  display: grid;
  grid-gap: 1px;
  background-color: #f0f0f1;
  height: 100%;
  width: 100%;
  margin: auto;
  grid-template-rows: 15% 45% 35% 5%;
  grid-template-areas: 'header'
                       'avatar'
                       'friends'
                       'footer' 
}

.ava-header {
  height: 100%;
  grid-area: header;
  display: flex;
  align-items: center;
  justify-content: center;
  font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
  font-size: 32px;
  /* padding: 40px 20px; */
  text-align: center;
  text-transform: uppercase;
  /* text-rendering: optimizeLegibility; */
  color: #f0f0f1;
  background-color: #333;
  letter-spacing: .1em;
  order: 0;
}

.avatar-card {
  grid-area: avatar;
  max-width: 200px;
  max-height: 50px;
  min-height: 100%;
  margin: 10px 5px 15px 5px;
  padding: 1px 5px 15px 5px;
  text-align: center;
  font-family: arial;
  display: flex;
  justify-self: center;
  align-items: flex-start;
  flex-direction: column;
  /* border: white solid 1px; */
  order: 1;
}

.avatar {
  width: 125px;
  height: 125px;
  border-radius: 50%;
  border: #eaecf3 solid 5px;
  height: 100%;
}

.ava-name {
  text-align: center;
}

.location-button {
  padding: 3px;
  margin: 5px;
  background-image:url(../icons/button-icons/home.png);
  background-size:70% 70%;
  background-repeat:no-repeat;
  background-position:center;
  width: 85%;
  height: 375px;
  border-radius: 10px;
  background-color: #455eeb;
  color:white;
  border:0px transparent;  
  vertical-align: text-bottom;
  display: inline-block;
  font-size: 14px;
  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
}

.logOut-button {
  padding: 3px 3px 10px 3px;
  margin: 5px;
  max-width: 160px;
  /* margin: 10px; */
  width: 135px;
  height: 45px; 
  border-radius: 4px;
  background: #db3236;
  color:white;
  border:0px transparent;  
  text-align: center;
  display: inline-block;
  font-size: 14px;
  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);

}

.friends {
  grid-area: friends;
  display: flex;
  justify-self: center;
  flex-direction: column;
  order: 2;
  margin: 10px;
}

.friend-title {
  margin: 10px 10px 5px 10px;
  display: flex;
  align-items: center;
  justify-self: center;
  flex-direction: column;
  letter-spacing: .1em;
  font-size: 32px;
  text-transform: uppercase;
}

.search-div {
  display: flex;
  align-items: center;
  margin: 10px;
}

.friend {
  display: flex;
  align-items: center;
}

.friend-search {
  max-height: 80px;
  height: 40px;
  width: 180px;
  padding: 0px 1px 0px 1px;
  margin: 5px;
  background: #ddd;
  font-size: 18px;
  border: none;
  cursor: pointer;
  border-radius: 5%;
  text-align: center;
  white-space: normal;
  word-wrap: break-word;
  word-break: break-all;
}

.friend-list {
  grid-area: friends;
  display: flex;
  align-items: center;
  justify-self: center;
  flex-direction: column;
  max-height: 200px;
  max-width: 200px;
  order: 3;
  text-align: center;
  margin: 20px;
}

.friend-avatar {
  width: 125px;
  height: 125px;
  border-radius: 50%;
  border: #eaecf3 solid 5px;
  display: flex;
  flex-direction: column;
}

.friend-text {
  font-style: bold;
  font-size: 20px;
  margin: 5px;
  text-transform: capitalize;
}

.friend-button {
  max-width: 85px;
  margin: 10px;
  width: 85px;
  height:35px; 
  border-radius: 3px;
  background: #2643e6;
  color:white;
  border:0px transparent;  
  text-align: center;
  display: inline-block;
  font-size: 12px;
  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
}

/*
====================
Alert Options Page
==================== 
*/
.alert-options-container {
  grid-template-rows: 5% 75% 20%;
  max-height: 100%;
  overflow-y: hidden;
}

.lat-long-container {
  text-align:right;
  vertical-align:text-top;
  font-size:10px;
  margin: 2%;
}

.category-buttons-container {
  display:grid;
  grid-template-columns: repeat(auto-fill, minmax(30%, 1fr));
  /* grid-auto-rows: minmax(65px, 100px); */
  padding: 5%;
  grid-gap: 10px;
  place-items: center center;
  /* align-items: center; */
}
/* ... */

